sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:15: error: illegal start of simple expression
    	if ((j,j-1))) {
                    ^